[package]
name = "mdtohtmlpdf"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.0.23", features = ["derive"] }
comrak = "0.14.0"
headless_chrome = "0.9.0"
katex = { version = "0.4", default-features = false, features = ["duktape"] }
rand = "0.8.5"

[build-dependencies]
base64 = "0.13.1"

